stop nav buttons from wrapping

--- a/src/com/content-nav/nav.less
+++ b/src/com/content-nav/nav.less
@@ -21,6 +21,7 @@
 #content {
 	& .content-nav {
 		margin: 0.5em 0;
+		white-space: nowrap;
 
 		& > .ui-button {
 			position: relative;
@@ -83,6 +84,7 @@
 					color: @COL_NDDDD;/*@NAV_BUTTON_BG;*/
 					border: 1px solid transparent;
 				}
+
 				&.-light {
 					border: 1px solid;
 					color: @COL_L;
